pages of my websites

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <section class="header" id="header">
+    <section class="topnav" id="header">
     <center>
         <a href="index.html">Home</a> &nbsp &nbsp &nbsp &nbsp
         <a href="#">About Me</a> &nbsp &nbsp &nbsp &nbsp
@@ -118,7 +118,7 @@
       </table> </br>
 
     </section>
-    <section class="footer" id="footer">
+    <section class="navbar" id="footer">
       <center>
       <img src="images\gmail.png" alt="Gmail" onclick="">
       <img src="images\facebook.png" alt="Facebook" onclick="">
