--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <title>Alfred Mutua Ng'ang'a Jr</title>
       <link rel="stylesheet" type="text/css" href="css\style.css">
 
-      <section class="header" id="header">
         <script type="text/javascript">
         function sum(){
            var a=document.getElementById('first').value;
@@ -39,7 +39,7 @@
          }
 
       </script>
-
+      <section class="topnav" id="header">
       <center>
           <a href="index.html">Home</a> &nbsp &nbsp &nbsp &nbsp
           <a href="aboutme.html">About Me</a> &nbsp &nbsp &nbsp &nbsp
@@ -78,14 +78,14 @@
 
 
 
-    <section class="footer">
+    <section class="navbar">
       <center>
       <img src="images\gmail.png" alt="Gmail" onclick="<a href='alfredmwangangi1996@gmail.com></a>'">
-      <img src="images\facebook.png" alt="Facebook" onclick="">
-      <img src="images\twitter.png" alt="Twitter" onclick="">
-      <img src="images\youtube.png" alt="Youtube" onclick="">
-      <img src="" alt="Linkedin" onclick="">
-      <img src="" alt="Github" onclick=""> </center>
+      <img src="images\facebook.png" alt="Facebook" onclick="<a href='https://www.facebook.com/mcalphie.junior</a>'">
+      <img src="images\twitter.png" alt="Twitter" onclick="<a href='https://twitter.com/AlfredsJunior></a>'">
+      <img src="images\youtube.png" alt="Youtube" onclick="<a href='https://www.youtube.com/channel/UCevZaAKto1lOQSV83gPtahg?disable_polymer=true></a>'">
+      <img src="" alt="Linkedin" onclick="<a href='https://www.linkedin.com/in/alfred-mutua-ng-ang-a-jr-035a43157/></a>'">
+      <img src="" alt="Github" onclick="<a href='https://github.com/alfredmwangangi></a>'"> </center>
     </section>
   </body>
 </html>
