my personal website and is responsive

--- a/contactme.html
+++ b/contactme.html
@@ -8,10 +8,11 @@
         <link rel="stylesheet" type="text/css" href="css\style.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-        <section class="header" id="header">
+        <section class="topnav" id="header">
         <center>
             <a href="index.html">Home</a> &nbsp &nbsp &nbsp &nbsp
             <a href="aboutme.html">About Me</a> &nbsp &nbsp &nbsp &nbsp
@@ -38,7 +39,7 @@
     </head>
   <body>     <!---->
 
-  <section class="contactme" id="contactmeme">   
+  <section class="contactme" id="contactmeme">
     <p> You can contact me via <a href="alfredmwangangi1996@gmail.com" target="_blank">Email Address</a> </p> <br>
     <p>Or you also reach me through my number +254718787588</p> </br>
       </section>
@@ -113,7 +114,7 @@
     </form>
 
             <!--Footer Div-->
-              <section class="footer" id="footer">
+              <section class="navbar" id="footer">
                 <center>
                 <img src="images\gmail.png" alt="Gmail" onclick=""> &nbsp &nbsp
                 <img src="images\facebook.png" alt="Facebook" onclick=""> &nbsp &nbsp
