--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   </section>
 
 
-  <section class="navbar" id="footer">
+  <section class="" id="footer">
     <center>
     <a href="#"> <img src="images\gmail.png" alt="Gmail" onclick=""></a>
     <a href="#"> <img src="images\facebook.png" alt="Facebook" onclick=""></a>
